<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgabout"
    android:orientation="vertical"
    tools:context=".About">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_baseline_arrow_back_24" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="About Us"
            android:textAlignment="center"
            android:textColor="#305F72"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="4dp"
                    card_view:cardCornerRadius="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/img_item_photo"
                            android:layout_width="125dp"
                            android:layout_height="183dp"
                            android:layout_marginBottom="4dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/alfian" />

                        <TextView
                            android:id="@+id/tv_item_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="8dp"
                            android:layout_toEndOf="@id/img_item_photo"
                            android:layout_toRightOf="@id/img_item_photo"
                            android:text="@string/alfian"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_item_detail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@id/tv_item_name"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_toEndOf="@id/img_item_photo"
                            android:layout_toRightOf="@id/img_item_photo"
                            android:ellipsize="end"
                            android:maxLines="7"
                            android:text="@string/desc_alfian" />
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="4dp"
                    card_view:cardCornerRadius="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/photo"
                            android:layout_width="125dp"
                            android:layout_height="183dp"
                            android:layout_marginBottom="4dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/rensi" />

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="8dp"
                            android:layout_toEndOf="@id/photo"
                            android:layout_toRightOf="@id/photo"
                            android:text="@string/name_rensi"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/detail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@id/name"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_toEndOf="@id/photo"
                            android:layout_toRightOf="@id/photo"
                            android:ellipsize="end"
                            android:maxLines="7"
                            android:text="@string/desc_rensi" />
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="4dp"
                    card_view:cardCornerRadius="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/photo2"
                            android:layout_width="125dp"
                            android:layout_height="183dp"
                            android:layout_marginBottom="4dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/salsa" />

                        <TextView
                            android:id="@+id/name2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="8dp"
                            android:layout_toEndOf="@id/photo2"
                            android:layout_toRightOf="@id/photo2"
                            android:text="@string/name_salsa"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/detail2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@id/name2"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_toEndOf="@id/photo2"
                            android:layout_toRightOf="@id/photo2"
                            android:ellipsize="end"
                            android:maxLines="7"
                            android:text="@string/desc_salsa" />
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>