<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kategori"
    android:orientation="vertical"
    tools:context=".MateriList">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_back_materiList"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back_white" />


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Kategori"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/listcat">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="4dp"
                        card_view:cardCornerRadius="20dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:background="@drawable/color_eksponen"
                            android:padding="15dp">

                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_marginLeft="16dp"
                                android:layout_marginBottom="4dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/eksponen" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:layout_marginTop="16dp"
                                android:layout_marginRight="16dp"
                                android:layout_marginBottom="8dp"
                                android:text="@string/materi1"
                                android:textAlignment="center"
                                android:textColor="#305F72"
                                android:textSize="24sp"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/eksponen_go"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginLeft="260dp"
                                android:layout_marginTop="16dp"
                                android:background="@drawable/go" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="4dp"
                        card_view:cardCornerRadius="20dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:background="@drawable/color_matrix"
                            android:padding="15dp">

                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_marginLeft="16dp"
                                android:layout_marginBottom="4dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/matrix" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:layout_marginTop="16dp"
                                android:layout_marginRight="16dp"
                                android:layout_marginBottom="8dp"
                                android:text="@string/matriks"
                                android:textAlignment="center"
                                android:textColor="#305F72"
                                android:textSize="24sp"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/matrix_go"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginLeft="260dp"
                                android:layout_marginTop="16dp"
                                android:background="@drawable/go" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="4dp"
                        card_view:cardCornerRadius="20dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:background="@drawable/color_aritmethic"
                            android:padding="15dp">

                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_marginLeft="16dp"
                                android:layout_marginBottom="4dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/aritmethic" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:layout_marginTop="16dp"
                                android:layout_marginRight="16dp"
                                android:layout_marginBottom="8dp"
                                android:text="@string/aritmatika"
                                android:textAlignment="center"
                                android:textColor="#305F72"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/aritmethic_go"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginLeft="260dp"
                                android:layout_marginTop="16dp"
                                android:background="@drawable/go" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="4dp"
                        card_view:cardCornerRadius="20dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:background="@drawable/color_geometry"
                            android:padding="15dp">

                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_marginLeft="16dp"
                                android:layout_marginBottom="4dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/geometry" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:layout_marginTop="16dp"
                                android:layout_marginRight="16dp"
                                android:layout_marginBottom="8dp"
                                android:text="@string/geometri"
                                android:textAlignment="center"
                                android:textColor="#305F72"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/geometry_go"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginLeft="260dp"
                                android:layout_marginTop="16dp"
                                android:background="@drawable/go" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>